official changelog for ephFrame
------------------------------------------------------------------------------

2009-08-01
+ fixed missing created update field when inserting new model entries with multiple behaviors
+ added theming, which includes js/css search in theme directory
+ fixed js packer to append line-feed at end of packed js files
+ added after[Action] and before[Action] callbacks in the controller
+ added subversion keywords and new formatted copyright message on every file
+ SGMLAttributes don’t render attributes with empty values anymore
+ DBDSN in db.php can be an array, enabling socket connections with it
+ missing afterAction callback for controller added (called after components)
+ empty cookie values return false now
+ fixed object->__mergeParentProperty to merge correctly using ->{$varname}
+ File->basename(true) will return with extension and false without extension
+ Dir->newFile can create new Files on the fly
+ CSS/JS Packer use Dir class to create Packed files now
+ added default view for missingtable error message
+ form->configure uses varchar length from model fields as maxLength for input fields
+ renamed Set class to IndexedArray!!!
+ fixed issue with String::substr() on php 5.2.6
+ imageconvolution added if missing in ImageSharpenFilter (needs high performance!)
+ image uses imageantialias only if function exists
+ replaced %1% placeholders to :[name] in string::substitute
+ added alias for string::substitute - string::insert
+ new formating for files skipping ?> in files and no tabs in PHPDocBlocks
+ Sanitizer::filename sanitizes filenames
+ Controller->redirect added optional beforeRedirect method
+ added String::prepend / append to add optional parts to a string
+ router can have theme, layout as parameter to change them in controller
+ added error message for layout missing exception
+ view adds http content-type header only if missing
+ model supports uniqueId method now (custom length)