@@ -119,14 +119,17 @@ class NestedSetBehavior extends ModelBehavior {
 	}
 	
 	public function afterDelete() {
-		if ($children = $this->tree(1, 1)) {
+		$this->model->query(new DeleteQuery($this->model->tablename, array('lft >= '.$this->model->lft, 'rgt <= '.$this->model->rgt)));
+		//$this->model->query(new DeleteQuery($this->model->tablename, array('id' => $this->model->id)));
+		$width = $this->model->rgt - $this->model->lft + 1;
+		$this->model->query('UPDATE '.$this->model->tablename.' SET rgt = rgt - '.$width.' WHERE rgt > ' . $this->model->rgt);
+		$this->model->query('UPDATE '.$this->model->tablename.' SET lft = lft - '.$width.' WHERE lft > ' . $this->model->rgt);
+		if ($children = $this->children()) {
 			foreach($children as $child) {
+				$child->behaviors->removeBehavior('NestedSet');
 				$child->delete();
 			}
 		}
-		$this->model->query(new DeleteQuery($this->model->tablename, array('lft >= '.$this->model->lft, 'rgt <= '.$this->model->rgt)));
-		$this->model->query('UPDATE '.$this->model->tablename.' SET lft=lft-ROUND(' . ($this->model->rgt - $this->model->lft + 1) . ') WHERE lft > ' . $this->model->rgt);
-		$this->model->query('UPDATE '.$this->model->tablename.' SET rgt=rgt-ROUND(' . ($this->model->rgt - $this->model->lft + 1) . ') WHERE rgt > ' . $this->model->rgt);
 		return true;
 	}
 	
