@@ -1,7 +1,7 @@
 official changelog for ephFrame
 ------------------------------------------------------------------------------
 
-2009-08-01
+2009-08-05
 + fixed missing created update field when inserting new model entries with multiple behaviors
 + added theming, which includes js/css search in theme directory
 + fixed js packer to append line-feed at end of packed js files
@@ -39,6 +39,7 @@ official changelog for ephFrame
 + httpheader parses status code now, httpresponse variable name fixed
 + model query and DBConnectionManager usage bit optimized (saving some RAM)
 + added error message for not writable directores in Dispatcher
++ added String::ifEmpty for default echo
 
 2009-05-25
 + added model behaviors callable from every model
